# treenome

./: .gitignore  CMakeLists.txt  GTree.C  InputFile.C  LICENSE  Makefile  Node.C  README.md  SeqRead.C  TreeNome.C  TreeTop.C  compile_commands.json
fastq/: example.fastq
include/: GTree.hpp  InputFile.hpp  Node.hpp  Phred33.hpp  SeqRead.hpp  TreeTop.hpp  cli.hpp
includes/: ArgParser.H  GTree.H  InputFile.H  Node.H  Phred33.H  SeqRead.H  TreeTop.H
src/: ArgParser.C  GTree.C  GTree.cpp  GTreefFile.C  GTreefReads.C  InputFile.C  InputFile.cpp  Node.C  Node.cpp  SeqRead.C  SeqRead.cpp  TreeNome.C  TreeTop.C  TreeTop.cpp  TreeTopfFile.C  TreeTopfReads.C  cli.cpp  main.cpp
